# ayttm

./: ChangeLog  ayttm.spec.in  configure.ac
modules/: Makefile.am
modules/jabber/: libEBjabber.c
modules/yahoo2/: Makefile.am  yahoo.c
po/: POTFILES.in  de.po  en_GB.po  es.po  fr.po  hi.po  nl.po  pt_BR.po  sv.po
src/: ayttm_tray.c  chat_window.c  edit_local_accounts.c  prefs.c  prefs.h  status.c
src/gtk/: Makefile.am  html_text_buffer.c  prefs_window.c  prefs_window.h
